<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/label_ip"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/ip1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="192" />

        <TextView
            android:id="@+id/ip2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="168" />

        <TextView
            android:id="@+id/ip3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />

        <EditText
            android:id="@+id/ip4"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="100" >
            <requestFocus />
       	</EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_port" />

        <TextView
            android:id="@+id/port"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="number"
            android:text="50002" />

    </LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/playerNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginLeft="15sp"
	        android:text="Player name:" />
	    
	    <EditText
	        android:id="@+id/playerName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:ems="10" >
	    </EditText>
    </LinearLayout>
    
    <Button
        android:id="@+id/connectButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openSocket"
        android:text="@string/connect" />
    
    <TextView
        android:id="@+id/statusBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/connectMessage" />
    
    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="onDisconnectButtonClick"
        android:text="@string/disconnect" />

</LinearLayout>