<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:baselineAligned="true"
    android:orientation="vertical" >

   <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:orientation="vertical" >

        <ImageView
            android:visibility="visible"
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/laboom" />  

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_start"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:contentDescription="@string/boomicon"
            android:src="@drawable/boomicon" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="50dp"
            android:background="#FFFFFF"
            android:onClick="startGame"
            android:text="@string/button_start"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_stat"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:contentDescription="@string/boomicon"
            android:src="@drawable/boomicon" />

        <Button
            android:id="@+id/button_stats"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#FFFFFF"
            android:onClick="openStat"
            android:text="@string/button_stats"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#000000"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>