<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical">

<ScrollView
android:layout_width="fill_parent"
android:layout_height="300dp">
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="vertical">

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame1"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage11"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage12"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage13"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage14"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage15"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage16"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />


</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon1" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame2"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage21"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage22"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage23"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage24"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage25"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage26"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />




</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon2" />

</LinearLayout>
</LinearLayout>


<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame3"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage31"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/om" />

<ImageView
android:id="@+id/myimage32"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/om" />

<ImageView
android:id="@+id/myimage33"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/om" />

<ImageView
android:id="@+id/myimage34"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/om" />

<ImageView
android:id="@+id/myimage35"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/om" />

<ImageView
android:id="@+id/myimage36"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/om" />




</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon3" />

</LinearLayout>
</LinearLayout>


<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame4"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage41"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage42"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage43"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage44"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage45"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage46"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />




</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon4" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame5"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage51"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage52"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage53"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage54"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon5" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame6"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage61"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage62"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage63"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />


</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon6" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame7"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage71"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon7" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame8"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage81"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon8" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame9"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage91"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon9" />

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame10"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/myimage101"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage102"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage103"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/fire11" />

<ImageView
android:id="@+id/myimage104"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/fire11" />


</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon10" />

</LinearLayout>
</LinearLayout>









<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame11"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/rus_flag"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/rus_flag" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon13" />

</LinearLayout>
</LinearLayout>





<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame12"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/japan_flag"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/jap_flag" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon14" />

</LinearLayout>
</LinearLayout>









<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame13"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/us_flag"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/us_flag" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon12" />

</LinearLayout>
</LinearLayout>








<LinearLayout

android:layout_width="fill_parent"
android:layout_height="200dp"
android:orientation="horizontal"
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/frame14"
android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire11" >

<ImageView
android:id="@+id/can_flag"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

android:src="@drawable/can_flag" />



</LinearLayout>

<LinearLayout

android:layout_weight="1"
android:layout_width="0dp"
android:layout_height="200dp"


android:background="@drawable/fire12" >

<TextView
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"

android:text="@string/weapon11" />

</LinearLayout>
</LinearLayout>
</LinearLayout>
</ScrollView>


<LinearLayout
android:layout_width="fill_parent"
android:layout_height="30dp"
android:orientation="horizontal"
android:baselineAligned = "false"> 
<LinearLayout

android:layout_weight="1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"


android:background="@drawable/fire3" >


<TextView
android:id="@+id/mytextview1"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"
android:gravity="center" />
</LinearLayout>
<LinearLayout

android:layout_weight="1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"


android:background="@drawable/fire3" >

<TextView
android:id="@+id/mytextview"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_weight="1"
android:gravity="center" />
</LinearLayout>
</LinearLayout>

<LinearLayout
android:layout_width="fill_parent"
android:layout_height="50dp"
android:orientation="horizontal">

<Button
android:id="@+id/btn_login"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_weight="1"
android:text="@string/reset" />

<Button
android:id="@+id/btn_login1"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_weight="1"
android:text="@string/purchase" />

</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="140dp"
android:orientation="horizontal"
android:background="@drawable/fire12" 
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/buy_list95"
android:layout_weight="1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/fire7" >




</LinearLayout>

<LinearLayout
android:id="@+id/buy_list96"
android:layout_weight="1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/fire7" >

</LinearLayout>

<LinearLayout
android:id="@+id/buy_list97"
android:layout_weight="1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/fire7" >

</LinearLayout>

<LinearLayout
android:id="@+id/buy_list98"
android:layout_weight="1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/fire7" >

</LinearLayout>

<LinearLayout
android:id="@+id/buy_list99"
android:layout_weight="1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/fire7" >

</LinearLayout>
</LinearLayout>

<LinearLayout

android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:background="@drawable/fire12" 
android:baselineAligned = "false">
<LinearLayout
android:id="@+id/flag_list"
android:layout_weight="1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/fire7" >




</LinearLayout>


</LinearLayout>


</LinearLayout>